change usage rules list by set in remedial action interface to guarantee uniqueness